--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-feather": "^2.0.10",
+    "react-icons": "^5.2.1",
     "react-responsive-carousel": "^3.2.23",
     "react-scripts": "5.0.1",
+    "react-web-vector-icons": "^1.0.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
